--- a/src/components/body.css
+++ b/src/components/body.css
@@ -1,3 +1,6 @@
+body {
+  min-width: 700px;
+}
 .picture {
   height: auto;
 
@@ -142,7 +145,7 @@
   .video {
     width: 100%;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: 20px;
   
   }
   .sectionbody {
