--- a/src/components/body.css
+++ b/src/components/body.css
@@ -145,7 +145,7 @@ body {
   .video {
     width: 100%;
     margin-left: auto;
-    margin-right: 20px;
+    margin-right: auto;
   
   }
   .sectionbody {
@@ -182,8 +182,8 @@ body {
   
     padding: 50px;
     padding-top: 60px;
-    font-size: 12px;
-    line-height: 14px;
+    font-size: 15px;
+    line-height: 21px;
     
   }
 }
