--- a/src/components/header.css
+++ b/src/components/header.css
@@ -120,26 +120,28 @@ li {
 }
 
 @media only screen and (max-width: 600px) {
-  .grow2:hover {
-    transform: scale(1.1);
+  .header {
+    height: 100px;
+    font-size: 0.5rem;
+    padding: 0;
+    letter-spacing: 10px;
   }
 
   img {
     height: auto;
-    width: 30px;
-    padding-top: 5px;
+    width: 40px;
   }
   p {
-    font-size: 35px;
-    padding-top: 25px;
-    letter-spacing: 3px;
+    font-size: 50px;
+    padding-top: 15px;
+    letter-spacing: 5px;
     padding-right: 15px;
   }
   li {
     list-style: none;
-    padding: 2.5px;
+    padding: 6px;
     justify-content: center;
-    padding-top: 13px;
+    padding-top: 10px;
   }
   .push {
     display: flex;
@@ -149,10 +151,10 @@ li {
   .pull {
     display: flex;
     margin-right: auto;
-    margin-top: 30px;
-    margin-left: 0px;
+    margin-top: 20px;
+    margin-left: 10px;
     padding-left: 0px;
-    font-size: 15px;
+    font-size: 20px;
     letter-spacing: 0px;
   }
 }
