--- a/src/components/header.css
+++ b/src/components/header.css
@@ -12,27 +12,14 @@ p {
 .header {
   height: 150px;
   background-size: 100% 500%;
-  background-color: black;
+
   color: white;
-  border: 5px solid black;
   display: flex;
-  background: #36c;
-  background-color: black;
-  background-image: radial-gradient(
-      white,
-      rgba(255, 255, 255, 0.2) 2px,
-      transparent 40px
-    ),
-    radial-gradient(white, rgba(255, 255, 255, 0.15) 1px, transparent 30px),
-    radial-gradient(white, rgba(255, 255, 255, 0.1) 2px, transparent 40px),
-    radial-gradient(
-      rgba(255, 255, 255, 0.4),
-      rgba(255, 255, 255, 0.1) 2px,
-      transparent 30px
-    );
+
   background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
   background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
-  background-color: black;
+  background-color: rgba(0, 0,0 , 0.5);
+  
 }
 
 .middle {
@@ -79,6 +66,46 @@ li {
   padding-left: 5px;
 }
 
+@media only screen and (max-width: 1300px) {
+  .header {
+    height: 100px;
+    font-size: 0.6rem;
+    padding: 0;
+    letter-spacing: 10px;
+  }
+
+  img {
+    height: auto;
+    width: 55px;
+  }
+  p {
+    font-size: 55px;
+    padding-top: 15px;
+    letter-spacing: 5px;
+    padding-right: 15px;
+  }
+  li {
+    list-style: none;
+    padding: 6px;
+    justify-content: center;
+    padding-top: 10px;
+  }
+  .push {
+    display: flex;
+    margin-left: auto;
+    margin-top: 20px;
+    margin-right: 10px;
+  }
+  .pull {
+    display: flex;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-left: 20px;
+    padding-left: 0px;
+    font-size: 30px;
+    letter-spacing: 0px;
+  }
+}
 @media only screen and (max-width: 1260px) {
   .header {
     height: 100px;
