--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Fjalla+One&family=Martel:wght@900&family=Source+Sans+Pro&display=swap");
 
 p {
-  font-family: "Fjalla One", sans-serif;
+  font-family:  sans-serif;
   font-size: 100px;
   position: absolute;
-  letter-spacing: 30px;
+  letter-spacing: 5px;
   margin-top: 0px;
   color: white;
 }
@@ -18,7 +18,7 @@ p {
 
   background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
   background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
-  background-color: rgba(0, 0,0 , 0.5);
+  background-color: rgba(0, 0,0 , 0.4);
   
 }
 
@@ -66,7 +66,7 @@ li {
   padding-left: 5px;
 }
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 1400px) {
   .header {
     height: 100px;
     font-size: 0.6rem;
@@ -168,7 +168,7 @@ li {
     list-style: none;
     padding: 6px;
     justify-content: center;
-    padding-top: 10px;
+    padding-top: 15px;
   }
   .push {
     display: flex;
